# rvllm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  VLLM19_PARITY.md  bench_harness.py  best_configs_sm121.md  docker-compose.yaml  hardq.txt  history.txt  install.sh  llm_instructions_sm121.md  mistral-35-integration.md  opus_is_very_stupid_it_needs_to_be_corrected_for_hours.md  parameters_for_nvfp4_sm121.md  pyproject.toml  x-post.txt
crates/rvllm-autotune/: Cargo.toml
crates/rvllm-autotune/src/: ffn.rs  profiler.rs
crates/rvllm-config/: Cargo.toml
crates/rvllm-config/src/: cache.rs  cli.rs  device.rs  engine.rs  lib.rs  model.rs  parallel.rs  scheduler.rs  telemetry.rs  validation.rs
crates/rvllm-core/: Cargo.toml
crates/rvllm-core/src/: config.rs  error.rs  hf.rs  lib.rs  output.rs  prelude.rs  types.rs
crates/rvllm-executor/: Cargo.toml
crates/rvllm-executor/src/: config.rs  executor.rs  factory.rs  lib.rs  multi_gpu.rs  single_gpu.rs  tensor_parallel.rs
crates/rvllm-gpu/: Cargo.toml  build.rs
crates/rvllm-gpu/src/: allocator.rs  buffer.rs  cooperative.rs  cpu_buffer.rs  cublas.rs  cublas_autotune.rs  cublas_ops.rs  cublaslt_ops.rs  cuda_allocator.rs  cuda_graph.rs  cutlass_ffi.rs  device.rs  ffi.rs  fp8_quantize.rs  kernel_loader.rs  lib.rs  mock.rs  nccl.rs  persistent_v2_ffi.rs  pinned_memory.rs  stream.rs
crates/rvllm-kv-cache/: Cargo.toml
crates/rvllm-kv-cache/src/: cache.rs  engine.rs  engine_cuda.rs  fp8_cache.rs  lib.rs  ops.rs  ops_cuda.rs
crates/rvllm-memory/: Cargo.toml
crates/rvllm-memory/src/: block.rs  cpu_pool.rs  gpu_pool.rs  lib.rs  pool.rs  swap.rs
crates/rvllm-model-runner/: Cargo.toml  README.md
crates/rvllm-model-runner/src/: bridge.rs  gpu_layer.rs  gpu_runner.rs  input.rs  lib.rs  runner.rs
crates/rvllm-python/: Cargo.toml
crates/rvllm-python/src/: lib.rs
crates/rvllm-quant/: Cargo.toml
crates/rvllm-quant/src/: config.rs  gemm.rs  lib.rs  linear.rs  method.rs  weight.rs
crates/rvllm-scheduler/: Cargo.toml
crates/rvllm-scheduler/src/: lib.rs  outputs.rs  scheduler.rs
crates/rvllm-sequence/: Cargo.toml
crates/rvllm-sequence/src/: group.rs  lib.rs  metadata.rs  sequence.rs  status.rs
crates/rvllm-speculative/: Cargo.toml
crates/rvllm-speculative/src/: config.rs  draft.rs  engine.rs  lib.rs  scheduler.rs  verification.rs
crates/rvllm-telemetry/: Cargo.toml
crates/rvllm-telemetry/src/: config.rs  handler.rs  init.rs  lib.rs  metrics.rs  recorder.rs
crates/rvllm-tp/: Cargo.toml
crates/rvllm-tp/src/: comm.rs  config.rs  lib.rs  nccl.rs  parallel_layer.rs  shard.rs
crates/rvllm-v2/: ARCHITECTURE.md  Cargo.toml
crates/rvllm-v2/src/: block_manager.rs  engine.rs  input.rs  integration.rs  kv_cache.rs  layer.rs  lib.rs  runner.rs  scheduler.rs  speculative.rs  types.rs  worker.rs
crates/rvllm-worker/: Cargo.toml
crates/rvllm-worker/src/: config.rs  gpu_worker.rs  graph_runner.rs  input.rs  lib.rs  metrics.rs  worker.rs
crates/rvllm-zig/: Cargo.toml  build.rs
crates/rvllm-zig/src/: lib.rs
v3/: Cargo.toml  GB10_SPEC.md  GEMMA_VISION_AUDIT.md  GEMMA_VISION_PLAN.md  IMPL_PLAN.md  INFERENCE_SERVER_PLAN.md  MISTRAL35_BATCHED_PREFILL_PLAN.md  MISTRAL35_BUG_HUNT.md  MISTRAL35_INTEGRATION_STATUS.md  MISTRAL35_PIXTRAL_VISION_PLAN.md  MISTRAL35_PROFILE_TEMPLATE.env  MISTRAL35_VISION_TODO.md  QWEN_BATCHED_PREFILL_PLAN.md  UNIFIED_PREFILL_MMA_PLAN.md  UNIFIED_PREFILL_SPEC.md  VISION_TODO.md  history.txt
v3/.archive/: MISTRAL35_BUG_HUNT_pre-2026-05-10.md
v3/.swarm/: tasks.jsonl
v3/crates/rvllm-attention/: Cargo.toml
v3/crates/rvllm-bench/: Cargo.toml
v3/crates/rvllm-fused/: Cargo.toml
v3/crates/rvllm-graph/: Cargo.toml
v3/crates/rvllm-kernels/: Cargo.toml  build.rs
v3/crates/rvllm-mem/: Cargo.toml
v3/crates/rvllm-metadata/: Cargo.toml
v3/kernels/: bf16_to_f16_sat.cu  compute_qkv_scales.cu  cutlass_stub_sm86.c  decode_metadata.cu  f16_to_bf16.cu  fused_gelu_mul_bf16.cu  fused_gelu_mul_two_f16.cu  fused_norm_add_residual.cu  fused_norm_add_residual_bf16.cu  fused_norm_add_residual_f16.cu  fused_qk_rmsnorm_bf16.cu  fused_qkv_rmsnorm.cu  fused_qkv_rmsnorm_bf16.cu  fused_rmsnorm_fp8_quant_bf16in.cu  fused_rope_cache_fp8kv.cu  fused_rope_partial_f16kv.cu  fused_rope_partial_fp8kv.cu  fused_rope_partial_fp8kv_bf16in.cu  fused_rope_partial_nvfp4kv.cu  fused_rope_partial_nvfp4kv_bf16in.cu  logit_softcap.cu  make_manifest.py  paged_attention_sm86.cu  paged_attention_sm89.cu  repetition_penalty.cu  rmsnorm_inplace_bf16.cu  rmsnorm_inplace_f16.cu  rmsnorm_inplace_f16_group_gamma.cu  scale_rows_f16.cu  scale_rows_f32.cu  scale_rows_f32_ratio.cu  slice_cols_f16.cu  vnorm_f16.cu
v3/prompts/: solidsf-agent-system.md
v3/reports/: ncu_sm121_decode_20260422.txt
v3/scripts/: bench_sm121.sh  gemma4_ampere_deploy.sh
v3/specs/: 17-cutlass-evt-norm-gemm-prologue.md  18-speculative-decoding.md  19-lm-head-fp8-passthrough.md  20-per-token-act-scales.md  21-fa3-fp8-o-epilogue.md
v3/tools/: awq_int4_gemm_bench.py  awq_int4_gemm_check.py  awq_int4_gemv_bench.py  awq_int4_gemv_check.py  clean_smoke.sh  cmp_g4v_substep.py  cmp_mistral35_layer_ref.py  cmp_qwen36_prefill_layers.py  cutlass_fp8_gemm_blockscale_sm120_check.py  dynamic_q_scale_check.py  f16_mma_probe_check.py  fa2_mma_vs_scalar_check.py  fa2_nvfp4_decode_check.py  fa2_nvfp4_prefill_check.py  fa2_nvfp4_split_decode_check.py  fa2_nvfp4_unified_prefill_check.py  fa2_precision_check.py  fa2_unified_prefill_check.py  fp8_gemm_channelscale_check.py  fp8_gemv_bench.py  fp8_mma_probe_check.py  fp8_mma_smem_probe_check.py  fp8_precision_check.py  gemma_vision_substep_hf_dump.py  hadamard_check.py  kv_policy_matrix.sh  ldmatrix_probe_check.py  logit_margin_analyze.py  mistral35_marlin_oracle_check.py  mistral35_w4a16_gemv_check.py  mma_throughput_bench.py  mma_throughput_bench_indep.py  multi_turn_check.py  nvfp4_mma_layout_probe.py  nvfp4_mma_path_a_probe_check.py  nvfp4_mma_probe_check.py  nvfp4_mma_scaled_probe_check.py  nvfp4_rotation_prototype.py  nvfp4_rotation_quickcheck.py  nvfp4_roundtrip_check.py  (+10 more)
(+758 files in other folders)
