[project]
name = "rvllm"
version = "0.1.0"
description = "High-performance LLM inference in Rust -- drop-in vLLM replacement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "m0at"}]
keywords = ["llm", "inference", "vllm", "rust", "gpu", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/m0at/rvllm"
Repository = "https://github.com/m0at/rvllm"
Documentation = "https://github.com/m0at/rvllm"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/rvllm-python/Cargo.toml"
features = ["pyo3/extension-module"]
