[package]
name = "rvllm-kv-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "KV-cache management for the rvLLM inference engine"
keywords = ["llm", "inference", "kv-cache", "attention", "vllm"]
categories = ["caching", "science"]

[features]
default = []
cuda = ["rvllm-gpu/cuda"]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
thiserror.workspace = true
half.workspace = true
bytemuck.workspace = true
tracing.workspace = true
