[package]
name = "rvllm-python"
version.workspace = true
edition.workspace = true

[lib]
name = "rvllm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
rvllm-core.workspace = true
rvllm-config.workspace = true
rvllm-sampling.workspace = true
rvllm-tokenizer.workspace = true
rvllm-engine.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = "1"
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
