[package]
name = "rvllm-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "vLLM-0.19-shaped runtime prototype for rvLLM"
keywords = ["llm", "inference", "gpu", "runtime", "vllm"]
categories = ["science", "concurrency", "hardware-support"]

[features]
default = ["cuda"]
cuda = ["rvllm-gpu/cuda", "rvllm-gpu/cublaslt", "rvllm-model-loader/cuda", "dep:cudarc"]
cuda-graphs = ["cuda", "rvllm-gpu/cuda-graphs"]
advanced = [
    "dep:rvllm-fusion",
    "dep:rvllm-autotune",
    "dep:rvllm-tp",
]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
rvllm-attention.workspace = true
rvllm-tokenizer.workspace = true
rvllm-model-loader.workspace = true
rvllm-fusion = { workspace = true, optional = true }
rvllm-autotune = { workspace = true, optional = true }
rvllm-tp = { workspace = true, optional = true }
cudarc = { version = "0.19", features = ["driver", "cublas", "f16", "cuda-version-from-build-system"], optional = true }
half.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "rvllm-v2-bench"
path = "src/bin/bench.rs"
required-features = ["cuda"]
