[package]
name = "rvllm-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "GPU worker processes for distributed inference in rvLLM"
keywords = ["llm", "inference", "worker", "distributed", "vllm"]
categories = ["concurrency", "hardware-support"]

[features]
default = []
cuda = ["dep:cudarc", "rvllm-gpu/cuda", "rvllm-model-runner/cuda", "rvllm-kv-cache/cuda", "rvllm-sampling/cuda", "rvllm-model-loader/cuda"]
cublaslt = ["cuda", "rvllm-gpu/cublaslt", "rvllm-model-runner/cublaslt"]

[dependencies]
cudarc = { version = "0.12", features = ["driver", "cublas", "f16", "cuda-12060"], optional = true }
half = "2"
rvllm-core.workspace = true
rvllm-config.workspace = true
rvllm-gpu.workspace = true
rvllm-model-runner.workspace = true
rvllm-kv-cache.workspace = true
rvllm-sampling.workspace = true
rvllm-model-loader.workspace = true
rvllm-fusion.workspace = true
rvllm-sequence.workspace = true
rvllm-telemetry.workspace = true
hf-hub = "0.4"
openssl = { workspace = true }
memmap2.workspace = true
metrics-exporter-prometheus.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
