[package]
name = "rvllm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-bench: deterministic prompts, per-bucket tok/s + p50/p99 latency,
# JSON output consumed by tools/bench-gate. See v3/specs/{15,16}.md.

# All three binaries drive `Gemma4Bringup::run_{bench,ppl,generate}`,
# which are `#[cfg(feature = "cuda")]` in the impl. Without
# `required-features` here, a default `cargo check --workspace` would
# try to compile the bins with `cuda` off and fail with E0599 on the
# three missing methods. Gating them on the cuda feature is the right
# semantics anyway — they all require a GPU to run.

[[bin]]
name = "rvllm-bench"
path = "src/main.rs"
required-features = ["cuda"]

[[bin]]
name = "rvllm-eval"
path = "src/bin/rvllm_eval.rs"
required-features = ["cuda"]

[[bin]]
name = "rvllm-ppl"
path = "src/bin/rvllm_ppl.rs"
required-features = ["cuda"]

[features]
default = []
cuda = ["rvllm-runtime/cuda", "rvllm-fused/cuda", "rvllm-mem/cuda", "dep:cudarc"]
# Forward the runtime's `gb10` feature so GB10-only bringup paths (FA2
# PTX attention, sm_121 CUTLASS .so resolution) are enabled when the
# bench is built for DGX Spark / consumer Blackwell.
gb10 = ["cuda", "rvllm-runtime/gb10"]

[dependencies]
rvllm-core = { workspace = true }
rvllm-runtime = { workspace = true }
rvllm-fused = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-cutlass = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = "0.20"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
