[package]
name = "rvllm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-runtime: Engine (type-state step_launch/step_collect),
# scheduler (Request state machine, BatchPlan), layer_exec (pure fn).
# See v3/specs/07-scheduler.md + 09-layer.md.

[features]
default = []
cuda = [
    "rvllm-mem/cuda",
    "rvllm-cutlass/cuda",
    "rvllm-attention/cuda",
    "rvllm-fused/cuda",
    "rvllm-metadata/cuda",
    "rvllm-graph/cuda",
    "rvllm-sampling/cuda",
    "dep:cudarc",
]
# GB10 / sm_121: `Bringup::load` picks `UnifiedArena`
# (`cuMemAllocManaged`) instead of `HbmArena` (`cuMemAlloc_v2`) when
# the live device is a Blackwell consumer part. Implies `cuda`.
gb10 = ["cuda", "rvllm-mem/gb10"]

# `probe-gemma4-load` requires a real CUDA device + Gemma 4 fp8 model
# artifacts. Kept as an opt-in `[[bin]]` guarded by
# `required-features = ["gb10"]` so `cargo build` never picks it up —
# the GB10 bring-up validation is an explicit operator action.
[[bin]]
name = "probe-gemma4-load"
path = "src/bin/probe_gemma4_load.rs"
required-features = ["gb10"]

[dependencies]
rvllm-core = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-cutlass = { workspace = true }
rvllm-attention = { workspace = true }
rvllm-fused = { workspace = true }
rvllm-metadata = { workspace = true }
rvllm-graph = { workspace = true }
rvllm-loader = { workspace = true }
rvllm-sampling = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
