[package]
name = "rvllm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-runtime: Engine (type-state step_launch/step_collect),
# scheduler (Request state machine, BatchPlan), layer_exec (pure fn).
# See v3/specs/07-scheduler.md + 09-layer.md.

[features]
default = []
cuda = [
    "rvllm-mem/cuda",
    "rvllm-cutlass/cuda",
    "rvllm-attention/cuda",
    "rvllm-fused/cuda",
    "rvllm-metadata/cuda",
    "rvllm-graph/cuda",
    "rvllm-sampling/cuda",
    "dep:cudarc",
]
# GB10 / sm_121: `Bringup::load` picks `UnifiedArena`
# (`cuMemAllocManaged`) instead of `HbmArena` (`cuMemAlloc_v2`) when
# the live device is a Blackwell consumer part. Implies `cuda`.
gb10 = ["cuda", "rvllm-mem/gb10"]

# `probe-gemma4-load` requires a real CUDA device + Gemma 4 fp8 model
# artifacts. Kept as an opt-in `[[bin]]` guarded by
# `required-features = ["gb10"]` so `cargo build` never picks it up —
# the GB10 bring-up validation is an explicit operator action.
[[bin]]
name = "probe-gemma4-load"
path = "src/bin/probe_gemma4_load.rs"
required-features = ["gb10"]

# `bench-qwen-prefill` times the per-token Qwen 3.6 prefill loop at
# several prompt-length buckets. Same gating reasoning as
# probe-gemma4-load: needs a real GB10 + a Qwen3-VL fp8 checkpoint.
# See v3/QWEN_BATCHED_PREFILL_PLAN.md (Phase 2).
[[bin]]
name = "bench-qwen-prefill"
path = "src/bin/bench_qwen_prefill.rs"
required-features = ["gb10"]

# `probe-qwen-fp8-proj` validates the m=1 dispatcher path is byte-
# identical to a direct Fp8GemvF16InLaunch call against the same
# weight + input, plus that the m≥2 path returns the Phase-3b
# deferral sentinel. See v3/QWEN_BATCHED_PREFILL_PLAN.md (Phase 3a).
[[bin]]
name = "probe-qwen-fp8-proj"
path = "src/bin/probe_qwen_fp8_proj.rs"
required-features = ["gb10"]

# `probe-mistral35-layer-ref` runs the pure-CPU Mistral 3.5 layer
# reference (mistral35_layer_ref::mistral_layer_step) and dumps
# per-position hidden states + final KV cache to disk as f32 LE.
# No CUDA / no model directory needed — the future cosine
# validation harness uses this as a deterministic baseline.
[[bin]]
name = "probe-mistral35-layer-ref"
path = "src/bin/probe_mistral35_layer_ref.rs"

[dependencies]
rvllm-core = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-cutlass = { workspace = true }
rvllm-attention = { workspace = true }
rvllm-fused = { workspace = true }
rvllm-metadata = { workspace = true }
rvllm-graph = { workspace = true }
rvllm-loader = { workspace = true }
rvllm-sampling = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
half = { workspace = true }
# Mistral 3.5 bring-up mmaps each safetensors shard for header
# parsing without pulling the multi-GiB payload into RAM.
memmap2 = "0.9"
image = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
