[package]
name = "rvllm-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-serve: HTTP serving loop. Reuses step_launch/step_collect.
# OpenAI-compatible API. See v3/specs/05-concurrency.md for the tokio -> worker channel design.

[[bin]]
name = "rvllm-server"
path = "src/main.rs"

[features]
default = []
cuda = [
    "rvllm-runtime/cuda",
    "rvllm-kernels/cuda",
    "rvllm-mem/cuda",
    "dep:cudarc",
]
cublaslt = ["cuda"]
gb10 = ["cuda", "rvllm-runtime/gb10", "rvllm-mem/gb10"]

[dependencies]
rvllm-core = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-mem = { workspace = true, optional = true }
rvllm-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = "0.20"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
