[package]
name = "rvllm-xla"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rvllm-core.workspace = true
rvllm-fused.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading = { version = "0.8", optional = true }

[features]
default = []
tpu = ["dep:libloading"]
